--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 project(CountingPolyominoes)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
 
-add_executable(CountingPolyominoes
-        main.cpp
-        redel.c)
+add_executable(CountingPolyominoes main.cpp)
