Mekvuzar(self). Seperated into server & client. In progress.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.15)
 project(CountingPolyominoes)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "-O3 -funroll-loops -Wall -Wextra")
 
-add_executable(CountingPolyominoes main.cpp)
+add_executable(CountingPolyominoes redelServer.cpp redelClient.cpp graphCreator.cpp graphCreator.h main.cpp redelClient.h redelServer.h)
