--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(CountingPolyominoes)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "-O3 -funroll-loops -Wall -Wextra")
 
-add_executable(CountingPolyominoes redelServer.cpp redelClient.cpp graphCreator.cpp graphCreator.h main.cpp redelClient.h redelServer.h)
+add_executable(CountingPolyominoes redelServer.cpp redelClient.cpp graphCreator.cpp graphCreator.h main.cpp redelClient.h redelServer.h main.cpp)
