--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(CountingPolyominoes)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS "-O3 -funroll-loops -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "-m64 -O3 -funroll-loops -Wall -Wextra")
 
-add_executable(CountingPolyominoes redelServer.cpp redelClient.cpp graphCreator.cpp graphCreator.h main.cpp redelClient.h redelServer.h main.cpp backups.cpp backups.h defs.h)
+add_library(RedelClient SHARED redelClient.cpp redelClient.h graphCreator.cpp graphCreator.h backups.cpp backups.h defs.h)
+add_library(RedelServer SHARED redelServer.cpp redelServer.h graphCreator.cpp graphCreator.h backups.cpp backups.h defs.h)
